<resources>
    <string name="app_name">Aston_contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">email</string>
    <string name="hint_phone_number">phone number</string>
    <string name="hint_last_name">last name</string>
    <string name="hint_first_name">first name</string>
    <string name="button_save_changes">save changes</string>
    <string name="btn_delete">delete</string>
    <string name="hint_contact_list">you have no contacts on device to display\ncreating new contacts is not implemented yet\nplease, create new ones with standart app </string>
    <string name="hint_middle_name">middle name</string>
    <string name="action_search">Search</string>
    <string name="popup_delete">DELETE</string>
</resources>